--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </a-assets>
   
   <!--Flight stuff plane SUIIIII-->
-  <a-marker-camera type="pattern" src="./assets/pattern-marker.patt">
+  <a-marker-camera type="pattern" url="./assets/pattern-marker.patt">
     <a-plane src="#card2" position="0 0 -1" width="2" height="1.5" rotation="-90 0 0"></a-plane>
   </a-marker-camera>
 
