--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   
   <!--Flight stuff plane SUIIIII-->
   <a-marker-camera type="pattern" url="./assets/pattern-marker.patt">
-    <a-plane src="#card2" position="0 0 -1" width="2" height="1.5" rotation="-90 0 0"></a-plane>
+    <a-plane src="#cardSUI" position="0 0 -1" width="2" height="1.5" rotation="-90 0 0"></a-plane>
   </a-marker-camera>
 
 </a-scene> 
