--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
   </a-assets>
   
   <!--Flight stuff plane SUIIIII-->
-  <a-marker-camera type="pattern" url="./assets/pattern-marker.patt">
+  <a-marker type="pattern" url="./assets/pattern-marker.patt">
     <a-plane src="#cardSUI" position="0 0 -1" width="2" height="1.5" rotation="-90 0 0"></a-plane>
-  </a-marker-camera>
+  </a-marker>
 
 </a-scene> 
 </body>
